refactor: Add sql and some field mask utils. (#34)
* feat(fieldmask): Add ParseFieldMask function

* feat: Add FieldMasksForType function

* feat: Make FieldMasksForType recursive to support nested structs

* refactor: Extract repository package

* feat: Add Transactionally to the Repository interface

* refactor: Use sqlc for CreateItem path

* refactor: Use the returned item to create

* refactor: Use sqlc for GetItems

* chore: Add stubbed update endpoint

* feat: Add RequestID middleware

* feat: Setup request id and logging config
